# ranker

./: .dockerignore  .dvcignore  .env_db_example  .env_example  .env_unittests  .env_xmanager_pipeline  .gitignore  .t.swp  Dockerfile_cpu  Dockerfile_gpu  Dockerfile_offline  Dockerfile_vizier  README.md  README.txt  check_can_run.sh  check_can_run2.sh  constraints.txt  docker-compose-dbs.yaml  docker-compose.yaml  init-databases.sh  init-dbs.sql  init-sqlite-databases.sh  k8s-manifests.yaml  kaggle-intersection.txt  kind-cluster.yaml  launcher.py  launcher2.py  launcher_2.py  launcher_2_async.py  orchestrator_constraints.txt  pyproject.toml  pytest.ini  r3.txt  requirements-cpu.txt  requirements-gpu.txt  requirements-kaggle-gpu.txt  requirements.txt  requirements0.txt  requirements2.txt  requirements3.txt  (+9 more)
deploy/compose/: docker-compose-TFS-dont-use.yaml  docker-compose-TFS.yaml  docker-compose-dbs.yaml  docker-compose-gpus.yaml  docker-compose-infer.yaml  docker-compose-triton-query.yaml  docker-compose-triton-ranker-dont-use.yaml  docker-compose.yaml
deploy/k8s/: app-runner.yaml  dbs.yaml  kind-cluster.yaml  rbac.yaml  train_job.yaml
docs/: jax_grain_sharding.txt  notes.txt  reqs.txt  security_notes.txt
docs/misc/: docker_debug.txt  docker_jax_networking.txt  fake_gcs_server.txt  jax_distr_notes.txt  k8s_kind_kfp_debugging.txt  kaggle_notes.txt  kubernetes_notes.txt  opt_cpu_usage_notes.txt  sockets.txt
docs/mlops/: analysis.txt  analysis_and_design.txt  big_picture.txt  data.txt  design_end_to_end_inference.txt  graph_data.txt  graph_db_notes.txt  jax_grain_sharding.txt  opt_gpu_notes.txt  reqs.txt
docs/mlops/model_analysis/: model_analysis.txt
export_src/: README.txt  environment.yml  pyproject.toml  requirements.txt
export_src/main/python/movie_lens_ranker_export/: end_to_end_recommendation.py  export.py  restore_from_orbax.py
export_src/test/python/movie_lens_ranker_export/: helper.py  test_export.py  test_plot_training_curves.py
export_src/test/resources/: README.txt  test_graph_ranker_request.json
inference_src/: pyproject.toml  requirements.txt
inference_src/main/rust/: Cargo.toml  README.txt  build.rs  movie_embeddings_indexer
inference_src/main/rust/config/: default.json
inference_src/main/rust/proto/recommender/: recommender.proto
inference_src/main/rust/proto/tensorflow/core/example/: feature.proto
inference_src/main/rust/proto/tensorflow/core/framework/: attr_value.proto  full_type.proto  function.proto  graph.proto  graph_debug_info.proto  node_def.proto  op_def.proto  resource_handle.proto  tensor.proto  tensor_shape.proto  types.proto  variable.proto  versions.proto
inference_src/main/rust/proto/tensorflow/core/protobuf/: meta_graph.proto  saved_object_graph.proto  saver.proto  struct.proto  trackable_object_graph.proto
inference_src/main/rust/proto/tensorflow_serving/apis/: classification.proto  get_model_metadata.proto  inference.proto  input.proto  model.proto  predict.proto  regression.proto
inference_src/main/rust/src/: app_config.rs  app_runner.rs  client.rs  embeddings_ann.rs  embeddings_util.rs  graph_builder.rs  inference.rs  lib.rs  main.rs  model_client.rs  orchestrator.rs  recommended_movies.rs  states.rs  user_history.rs  util.rs
inference_src/test/rust/test/: app_config_test.rs  app_runner_test.rs  client_test.rs  embedding_ann_test.rs  graph_builder_test.rs  helper.rs  integration_test.rs  model_client_test.rs  orchestrator_test.rs  recommended_movies_test.rs  user_history_test.rs  util_test.rs
k8s/kind_k8s/: Dockerfile_kfp  README.txt  dbs.yaml  debugging_notes.txt  k8s_train_util.py  kfp_notes.txt  kind-cluster.yaml  kind_util.py  run_app_trainer.py  run_app_trainer_kfp.py  test_app_trainer_kfp.py  train_job.yaml  util_kind.py
kubernetes/: init_venv.sh  kubernetes_notes.txt  notes.txt
kubernetes/kind_k8s/: app-runner.yaml  dbs.yaml  debugging_notes.txt  extract_hpo_results.py  hpo_results.txt  kind_notes.txt  kind_util.py  run_app.sh  run_app_trainer.py  run_app_trainer.sh  run_app_trainer_kfp.py  secrets.yaml  train_job.yaml  trainer_v2_notes.txt
misc/: init_ranker_venv.sh  init_xmanager_venv.sh  remove_venv.sh
orchestration/k8s/: air_gapped_kfpv2_prep.py  run_app.sh  run_app_trainer.py  run_app_trainer.sh  run_app_trainer_kfp.py  run_config.env  test_app_trainer_kfp.py  util_kfpv2.py  util_kind.py
orchestration/xmanager/: Dockerfile_hello_world  Dockerfile_offline  Dockerfile_offline_gpu  db_config.yaml  hello_world  launcher_helper.py  launcher_pipeline.py  requirements.txt  tmp_launcher.py
orchestrator_xmngr/: launcher.py
scann_c++_grpc_service_src/: .bazelrc  BUILD  MODULE.bazel  README.txt  bazel-bin  bazel-out  bazel-scann_c++_grpc_service_src  bazel-testlogs  searcher.cc  searcher.h  service.proto  tf_bin.BUILD  tf_stub.BUILD
scann_c++_grpc_service_src/.devcontainer/: devcontainer.json
scripts/: get_mlflow_runs.py  get_mlflow_tables.py  get_vizier_tables.sh  init_ranker_venv.sh  init_xmanager_venv.sh  make_kaggle_upload.sh  prep_for_tests.sh
src/: Dockerfile_cpu
src/main/python/movie_lens_ranker/: BatchSampler.py  CandidateIdTransform.py  Negatives_vec.py  model.py  (+27 more)
src/main/rust/: Cargo.toml
src/main/rust/src/: graph_builder.rs  lib.rs  recommended_movies.rs  transforms.rs  user_history.rs  util.rs
src/test/resources/: .gitignore  README.txt  data.dvc  movie_embeddings.array_record.dvc  movie_ids.array_record.dvc  ratings_part_1.array_record.dvc  ratings_part_1_tiny.array_record.dvc  ratings_part_2.array_record.dvc  train_val_metrics.json  user_embeddings.array_record.dvc  user_recommendations_disliked_in_test.array_record.dvc  user_recommendations_disliked_in_train.array_record.dvc  user_recommendations_without_train_test_val.array_record.dvc  user_recommendations_without_train_val.array_record.dvc
tf_c++_op_src/: BUILD  README.txt  graph_builder_op.cc
tf_c++_op_src/.devcontainer/: devcontainer.json
xmngr_controller/: Dockerfile_offline  hello_world.cc  launcher.py  launcher_2.py  launcher_2_cores_tune.py  launcher_pipeline.py  test_pattern.py  test_pipeline_pattern.py
(+97 files in other folders)
