[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[project]
name = "movie_lens_ranker"
version = "0.1.0"
description = "Ranker class for Kaggle recommender systems project"
authors = [
    { name = "Nichole King" },
]
requires-python = ">=3.12.0,<3.13"
dependencies = [
    "numpy",
    "msgpack",
]
readme = "README.md"
license = { text = "MIT" }

classifiers = [
  "Development Status :: 1 - development",
]

[project.urls]
Homepage = "https://www.kaggle.com/code/nicholeasuniquename/ranker-cross-encoder-w-gatv2/"
Repository = "https://github.com/nking/ranker.git"

[tool.maturin]
# This tells maturin where your rust project lives
manifest-path = "src/rust/Cargo.toml"
# This tells maturin where your python source is located
python-source = "src/main/python"