[build-system]
requires = ["setuptools>=72", "wheel", "tomli"]
build-backend = "setuptools.build_meta"
[project]
name = "movie_lens_ranker"
version = "0.1.0"
description = "Ranker class for Kaggle recommender systems project"
authors = [
    { name = "Nichole King" },
]
requires-python = ">=3.12.0,<3.13"
#  RUN pip install --no-deps -r requirements-cpu.txt or -gpu.txt
dependencies = [
]
readme = "README.txt"
license = "MIT"

classifiers = [
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 1 - development",
  "Programming Language :: Python",
]

[tool.setuptools]

[tool.setuptools.packages.find]
where = ["src/main/python"]
include = ['movie_lens_ranker',]
#exclude = ["tests"]

[project.optional-dependencies]
#test = ["pytest", ]

[project.urls]
Homepage = "https://www.kaggle.com/code/nicholeasuniquename/ranker-cross-encoder-w-gatv2/"
Repository = "https://github.com/nking/ranker.git"
