[build-system]
requires = ["maturin>=1.14,<2.0"]
build-backend = "maturin"

[project]
name = "movie_lens_ranker_inference"
version = "0.1.0"
description = "Ranker inference for Kaggle recommender systems project"
authors = [
    { name = "Nichole King" },
]
requires-python = ">=3.12.0,<3.13"
#see requirements-[c|g]pu.txt for dependencies
dependencies = [
]
readme = "README.txt"
license = { text = "MIT" }

classifiers = [
    "Development Status :: 1 - development",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
Homepage = "https://www.kaggle.com/code/nicholeasuniquename/ranker-cross-encoder-w-gatv2/"
Repository = "https://github.com/nking/ranker.git"

[tool.maturin]
# This tells maturin where your rust project lives
manifest-path = "inference_src/main/rust/Cargo.toml"
# This tells maturin where your python source is located
python-source = "inference_src/main/python"

[tool.setuptools.packages.find]
where = ["inference_src/main/python"]
include = ["movie_lens_ranker_inference*"] # Optional, but good for being explicit
