###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
module(
    name = "scann_service",
    version = "1.0",
)

# Pull standard dependencies from the Bazel Central Registry (BCR)
# ScANN MODULE.bzel uses rules_cc version 0.1.4, but will set to more modern:
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "grpc", version = "1.82.0", repo_name = "com_github_grpc_grpc")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_python", version = "1.6.3")
bazel_dep(name = "protobuf", version = "35.0", repo_name="com_google_protobuf")
bazel_dep(name = "abseil-cpp", version = "20250814.1", repo_name="com_google_absl")
bazel_dep(name = "pybind11_bazel", version = "3.0.1")

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "eigen", version = "4.0.0-20241125.bcr.2")
#bazel_dep(name = "googletest", version = "1.17.0", repo_name = "com_google_googletest")
bazel_dep(name = "highway", version = "1.3.0", repo_name = "com_google_highway")
bazel_dep(name = "zlib", version = "1.3.1.bcr.6")

# Override envoy_api to the latest version to fix the googleapis macro bug
bazel_dep(name = "envoy_api", version = "0.0.0-20260130-84e8436")
single_version_override(
    module_name = "envoy_api",
    version = "0.0.0-20260130-84e8436",
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "scann",
    urls = ["https://github.com/google-research/google-research/archive/5b09c22d73a9d35eb6c5d2a99b95677a45053466.zip"],
    strip_prefix = "google-research-5b09c22d73a9d35eb6c5d2a99b95677a45053466/scann",
    integrity = "sha256-uyFx52hKr/aQHvWMzr5doYIwm31Pclbruq3lRHLd77s=",
)

# Keep your scann_ext definition
scann_ext = use_extension("//:deps.bzl", "scann_dependencies")
#use_repo(scann_ext, "scann")
