###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
module(
    name = "scann_service",
    version = "1.0",
)

new_local_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:local.bzl", "new_local_repository")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")


# Pull standard dependencies from the Bazel Central Registry (BCR)
# ScANN MODULE.bzel uses rules_cc version 0.1.4, but will set to more modern:
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "grpc", version = "1.82.0", repo_name = "com_github_grpc_grpc")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_python", version = "1.9.0")
bazel_dep(name = "protobuf", version = "35.0", repo_name = "com_google_protobuf")
bazel_dep(name = "abseil-cpp", version = "20250814.1", repo_name = "com_google_absl")
bazel_dep(name = "pybind11_bazel", version = "3.0.1")
bazel_dep(name = "platforms", version = "1.0.0")
#bazel_dep(name = "eigen", version = "4.0.0-20241125.bcr.2")
bazel_dep(name = "eigen", version = "5.0.1.bcr.2")

#bazel_dep(name = "googletest", version = "1.17.0", repo_name = "com_google_googletest")
bazel_dep(name = "highway", version = "1.3.0", repo_name = "com_google_highway")
bazel_dep(name = "zlib", version = "1.3.1.bcr.6")

# Override envoy_api to the latest version to fix the googleapis macro bug
bazel_dep(name = "envoy_api", version = "0.0.0-20260130-84e8436")
single_version_override(
    module_name = "envoy_api",
    version = "0.0.0-20260130-84e8436",
)

# in devcontainer.json, tf is installed with: pip3 install tensorflow==2.20.0 in the terminal of the remote dev container.
# can find it by using python, import tensorflow as tf.  then print tf._tf_dir
# then the path used here should contain:
# libtensorflow_framework.so.2
# include/*
new_local_repository(
    name = "tf_local_pip",
    build_file = "//:tf_bin.BUILD",
    path = "/usr/local/lib/python3.12/dist-packages/tensorflow",
)

# Download TensorFlow, name it what ScaNN expects, and inject our custom BUILD file
http_archive(
    name = "local_config_tf",
    build_file = "//:tf_stub.BUILD",
    integrity = "sha256-IT7fA6x8TnTY6yB0IWroyK5PMlxrwi79Fs/e7SBzvWY=",
    patch_cmds = [
        # Fix the glob() error by removing internal Bazel files
        "find . -mindepth 2 -name BUILD -exec rm -f {} +",
        "find . -mindepth 2 -name BUILD.bazel -exec rm -f {} +",
    ],
    strip_prefix = "tensorflow-2.20.0",
    urls = ["https://github.com/tensorflow/tensorflow/archive/refs/tags/v2.20.0.zip"],
)

#http_archive(
#    name = "org_tensorflow",
#    urls = ["https://github.com/tensorflow/tensorflow/archive/refs/tags/v2.20.0.zip"],
#    strip_prefix = "tensorflow-2.20.0",
#    sha256 = "...", # change this when printed by bazel
#)

http_archive(
    name = "scann",
    integrity = "sha256-uyFx52hKr/aQHvWMzr5doYIwm31Pclbruq3lRHLd77s=",
    strip_prefix = "google-research-5b09c22d73a9d35eb6c5d2a99b95677a45053466/scann",
    urls = ["https://github.com/google-research/google-research/archive/5b09c22d73a9d35eb6c5d2a99b95677a45053466.zip"],
)

# Keep your scann_ext definition
#scann_ext = use_extension("//:deps.bzl", "scann_dependencies")
#use_repo(scann_ext, "scann")
