#after updating this, cd to src/rust and invoke cargo update
[package]
name = "inference_engine"
version = "0.1.0"
edition = "2024"

[lib]
name = "inference_engine"
#  Add "rlib" so Rust tests can import the code
crate-type = ["cdylib", "rlib"]

[dependencies]
numpy = "0.29"
ndarray = "0.17"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.3"
rustc-hash = "2.0"
#to enable the gcp feature, use:
object_store = { version = "0.13.1", features = ["gcp"] }
parquet = { version = "59.0.0", features = ["arrow", "async", "object_store"] }
arrow-array = "59.0.0"
futures = "0.3"
tokio = { version = "1.52.3", features = ["full", "macros", "rt-multi-thread"] }
arrow-schema = "59.0.0"
##tensorflow = "0.21.0"
tonic = "0.14.6"
prost = "0.14.4"
once_cell = "1.21.4"
serde_json = "1.0.150"

tonic-build = "0.14.6"
tonic-prost = "0.14.6"
prost-types = "0.14.4"

arc-swap = "1.9.2"

rand = "0.8"
notify = "9.0.0-rc.4"

usearch = "2.26.0"

clap = { version = "4.6.2", features = ["derive", "env"] }
tonic-health = "0.14.6"
tempfile = "3.27.0"
tokio-stream = "0.1.18"

[build-dependencies]
tonic-prost-build = "0.14.6"

# Force Cargo to look outside its project root for the test file
[[test]]
name = "integration_tests"
path="../../test/rust/test/integration_test.rs"

[[test]]
name = "user_history_tests"
path="../../test/rust/test/user_history_test.rs"

[[test]]
name = "recommended_movies_tests"
path="../../test/rust/test/recommended_movies_test.rs"


[[test]]
name = "graph_builder_tests"
path="../../test/rust/test/graph_builder_test.rs"

[[test]]
name = "client_tests"
path= "../../test/rust/test/model_client_test.rs"

[[test]]
name = "embedding_ann_tests"
path="../../test/rust/test/embedding_ann_test.rs"

[[test]]
name = "util_tests"
path="../../test/rust/test/util_test.rs"

[[test]]
name = "orchestrator_tests"
path="../../test/rust/test/orchestrator_test.rs"

[[test]]
name = "app_config_tests"
path="../../test/rust/test/app_config_test.rs"

[[test]]
name = "app_runner_tests"
path="../../test/rust/test/app_runner_test.rs"
