#after updating this, cd to src/rust and invoke cargo update
[package]
name = "prep_inputs_for_graphranker"
version = "0.1.0"
edition = "2024"

[lib]
name = "prep_inputs_for_graphranker"
#  Add "rlib" so Rust tests can import the code
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.29", features = ["extension-module"] }
numpy = "0.29"
ndarray = "0.17"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.3"
rustc-hash = "2.0"
#to enable the gcp feature, use:
object_store = { version = "0.13.1", features = ["gcp"] }
parquet = { version = "59.0.0", features = ["arrow", "async", "object_store"] }
arrow-array = "59.0.0"
futures = "0.3"
tokio = { version = "1.52.3", features = ["full"] }
url = "2.5.8"

# Force Cargo to look outside its project root for the test file
[[test]]
name = "integration_tests"
path="../../test/rust/test/integration_test.rs"

[[test]]
name = "user_history_tests"
path="../../test/rust/test/user_history_test.rs"
